--- a/lists/templates/home.html
+++ b/lists/templates/home.html
@@ -1,5 +1,9 @@
 <html>
-    <title>To-Do lists</title>
+    
+    <head>
+        <title>To-Do lists</title>
+    </head>
+    
     <body>
         <h1>Your To-Do list</h1>
 
@@ -7,6 +11,7 @@
 
         <table id="id_list_table">
         </table>
-        
+
     </body>
+    
 </html>
